--- a/HairSalon.Tests/HairSalon.Tests.csproj
+++ b/HairSalon.Tests/HairSalon.Tests.csproj
@@ -15,4 +15,4 @@
   <ItemGroup>
     <ProjectReference Include="..\HairSalon\HairSalon.csproj" />
   </ItemGroup>
-</Project>bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
+</Project>
